[gd_scene load_steps=12 format=3 uid="uid://boxr25jey47t7"]

[ext_resource type="Texture2D" uid="uid://o0rnoarmmj4t" path="res://assets/enemies/explosion.png" id="1_8ofiu"]
[ext_resource type="Script" path="res://scenes/entities/asteroid_2.gd" id="1_rc74w"]
[ext_resource type="Texture2D" uid="uid://cn0kotunrl60m" path="res://assets/environment/asteroid_2.png" id="2_ebedn"]

[sub_resource type="AtlasTexture" id="AtlasTexture_max1n"]
atlas = ExtResource("1_8ofiu")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_y83f8"]
atlas = ExtResource("1_8ofiu")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_i75h3"]
atlas = ExtResource("1_8ofiu")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_dju0m"]
atlas = ExtResource("1_8ofiu")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_0j35y"]
atlas = ExtResource("1_8ofiu")
region = Rect2(64, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_rjg3q"]
atlas = ExtResource("2_ebedn")
region = Rect2(0, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_mpewo"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_max1n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y83f8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i75h3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dju0m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0j35y")
}],
"loop": false,
"name": &"death",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rjg3q")
}],
"loop": false,
"name": &"default",
"speed": 0.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_8m85c"]
radius = 17.0
height = 50.0

[node name="Asteroid2" type="Area2D"]
collision_layer = 32
collision_mask = 10
script = ExtResource("1_rc74w")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_mpewo")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1, 1)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_8m85c")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(1.5, 2)
scale = Vector2(2.55, 1.8)

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
